--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -46,16 +46,16 @@ Abbreviation of various terms and phrases.
 # {{lb|en|biochemistry}} {{initialism of|en|cluster of differentiation}}
 
 ====Translations====
-{{trans-top-also|abbreviations of compact-disc which are actually in use|compact disc}}
+{{trans-top-also|abbreviation of compact disc|compact disc}}
 * Arabic: {{t|ar|سِي دِي|m}}
 * Armenian: {{t+|hy|CD|sc=Armn}}
-* Bengali: {{t|bn|সিডি|tr=siḑi|sc=Beng}}
+* Bengali: {{t|bn|সিডি}}
 * Burmese: {{t|my|စီဒီ}}
 * Chinese:
 *: Cantonese: {{t|yue|CD|tr=si1 di1|sc=Hani}}
 *: Mandarin: {{t+|cmn|CD|tr=xīdì|sc=Hani}}, {{t+|cmn|光盤|sc=Hani}}, {{t+|cmn|光盘|tr=guāngpán|sc=Hani}}, {{t+|cmn|光碟|tr=guāngdié|sc=Hani}}
 * Classical Nahuatl: {{t|nci|yahualtōntli}}
-* Dutch: {{t+|nl|cd|m}} (lower case)
+* Dutch: {{t+|nl|cd|m}}
 * Esperanto: {{t|eo|KD}}
 * Finnish: {{t+|fi|CD}}
 * French: {{t+|fr|CD|m}}
@@ -68,13 +68,13 @@ Abbreviation of various terms and phrases.
 * Korean: {{t+|ko|시디}}
 * Macedonian: {{t|mk|це-де|n}}
 * Malay: {{t|ms|CD}}
-* Persian: {{t|fa|سی‌دی|tr=sidi|sc=fa-Arab}}
+* Persian: {{t|fa|سی‌دی|tr=si-di|sc=fa-Arab}}
 * Portuguese: {{t+|pt|CD|m}}
 * Russian: {{t+|ru|CD|m}}, {{t|ru|си-ди́|m}}
 * Spanish: {{t+|es|CD|m}}
 * Swedish: {{t+|sv|CD|c}}
 * Thai: {{t+|th|ซีดี}}
-* Urdu: {{t|ur|سی ڈی|tr=sīḍī|sc=ur-Arab}}
+* Urdu: {{t|ur|سی ڈی|tr=sī-ḍī|sc=ur-Arab}}
 * Vietnamese: {{t-needed|vi}}
 {{trans-bottom}}
 
