--- a/en/l/Las Vegas.741384.wikitext
+++ b/en/l/Las Vegas.741384.wikitext
@@ -25,7 +25,7 @@ From {{etyl|es|en}} {{m|es|las}} {{m|es|vegas||the fertile meadows}}.
 {{trans-top|city}}
 * Arabic: {{t|ar|لَاس فِيغَاس|m|tr=las fīḡas}}
 * Armenian: {{t+|hy|Լաս Վեգաս}}
-* Bengali: {{t|bn|লাস ভেগাস|tr=Las Bhegas|sc=Beng}}
+* Bengali: {{t|bn|লাস ভেগাস}}
 * Chinese:
 *: Mandarin: {{t+|cmn|拉斯維加斯|sc=Hani}}, {{t+|cmn|拉斯维加斯|tr=Lāsīwéijiāsī|sc=Hani}}
 * Esperanto: {{t|eo|Lasvegaso}}
@@ -33,13 +33,13 @@ From {{etyl|es|en}} {{m|es|las}} {{m|es|vegas||the fertile meadows}}.
 * Greek: {{t+|el|Λας Βέγκας|n}}
 {{trans-mid}}
 * Japanese: {{t|ja|ラスベガス|tr=Rasubegasu}}
-* Korean: {{t|ko|라스베이거스|tr=Laseubeigeoseu}}
-* Marathi: {{t|mr|लास व्हेगस|n|tr=lāsa vhegāsa|sc=Deva}}
+* Korean: {{t|ko|^라스베이거스}}
+* Marathi: {{t|mr|लास व्हेगस|n}}
 * Navajo: {{t|nv|Naʼazhǫǫsh Hatsoh}}
 * Polish: {{t+|pl|Las Vegas|n}}
 * Portuguese: {{t|pt|Las Vegas|f}}
 * Russian: {{t+|ru|Лас-Ве́гас|m}}
-* Spanish: {{t+|es|Las Vegas|f|p}}
+* Spanish: {{t+|es|Las Vegas|f-p}}
 * Turkish: {{t|tr|Las Vegas}}
 {{trans-bottom}}
 
