--- a/en/w/Wembley.803277.wikitext
+++ b/en/w/Wembley.803277.wikitext
@@ -10,7 +10,7 @@ Derived from the Old English proper name ''Wemba'' and {{inh|en|ang|lēah|t=clea
 {{wikipedia|Wembley Stadium}}
 {{en-proper noun}}
 
-# {{place|en|suburb|in northwestern|city/London|cc/England}}
+# {{place|en|suburb|in northwestern|city/London|cc/England}}.
 # A stadium in [[London]], the national sports stadium and venue where finals of major [[football]] tournaments are held.
 #: ''If they carry on with their good form, they'll be at '''Wembley''' at the end of the season.''
 #* {{quote-journal
@@ -24,4 +24,3 @@ Derived from the Old English proper name ''Wemba'' and {{inh|en|ang|lēah|t=clea
 |passage=Dirk Kuyt sandwiched a goal in between Carroll's double as City endured a night of total misery, with captain Carlos Tevez limping off early on with a hamstring strain that puts a serious question mark over his participation in Saturday's FA Cup semi-final against Manchester United at '''Wembley'''.}}
 
 [[Category:en:Football (soccer)]]
-[[Category:en:London]]
