--- a/en/f/ferret.8237.wikitext
+++ b/en/f/ferret.8237.wikitext
@@ -100,8 +100,7 @@ From {{der|en|enm|furet}}, {{m|enm|ferret}}, from {{der|en|fro|furet}}, from {{d
 
 # To hunt [[game]] with ferrets.
 # {{lb|en|ambitransitive}} To [[uncover]] and bring to [[light]] by [[searching]]; usually to ''ferret out''.
-#* {{rfdatek|en|William Shakespeare}}
-#*: Master Fer! I'll fer him, and firk him, and '''ferret''' him.
+#* {{RQ:Shakespeare Henry 5|act=IV|scene=iv|passage=Master Fer! I'll fer him, and firk him, and '''ferret''' him.}}
 #* {{quote-book|en|year=1859|author=Charles Dickens|title=A Tale of Two Cities| passage=I confess that we were so unpopular with the outrageous mob, that I only got away from England at the risk of being ducked to death, and that Cly was so '''ferreted''' up and down, that he never would have got away at all but for that sham.}}
 #* {{quote-book|en|year=1842|author=Edgar Alan Poe|title=The Mistery of Marie Roget| passage=He had been piqued by the failure of all his endeavors to '''ferret''' out the assassins.}}
 #* '''1922''', {{w|Virginia Woolf}}, ''{{w|Jacob's Room}}'' Chapter 1
