--- a/en/p/phylloxera.746072.wikitext
+++ b/en/p/phylloxera.746072.wikitext
@@ -21,9 +21,10 @@ From the original, superseded genus name {{m|mul|Phylloxera}}, {{etyl|NL.|en}}, 
 ====Translations====
 {{trans-top|aphid}}
 * French: {{t+|fr|phylloxéra|m}}
+* German: {{t+|de|Reblaus|f}},
 * Greek: {{t|el|φυλοξήρα|f}}
-* Hungarian: {{t+|hu|filoxéra}}
 {{trans-mid}}
+* Hungarian: {{t+|hu|filoxéra}}
 * Italian: {{t|it|fillossera|f}}
 * Romanian: {{t+|ro|filoxeră|f}}
 {{trans-bottom}}
