--- a/en/a/aziridine.742293.wikitext
+++ b/en/a/aziridine.742293.wikitext
@@ -24,8 +24,8 @@
 
 ====Translations====
 {{trans-top|three-membered heterocycle}}
-* Chinese: [[氮丙啶]] (dànbǐngdìng)
-*: Mandarin: {{t|cmn|環乙亞胺}}, {{t|cmn|环乙亚胺|tr=huányǐyààn}}
+* Chinese: 
+*: Mandarin: {{t|cmn|氮丙啶|dànbǐngdìng}}, {{t|cmn|環乙亞胺}}, {{t|cmn|环乙亚胺|tr=huányǐyààn}}
 * Finnish: {{t|fi|etyleeni-imiini}}
 {{trans-mid}}
 * German: {{t|de|Ethylenimin|n}}
