--- a/en/a/aziridine.742293.wikitext
+++ b/en/a/aziridine.742293.wikitext
@@ -25,7 +25,7 @@
 ====Translations====
 {{trans-top|three-membered heterocycle}}
 * Chinese: 
-*: Mandarin: {{t|cmn|氮丙啶|dànbǐngdìng}}, {{t|cmn|環乙亞胺}}, {{t|cmn|环乙亚胺|tr=huányǐyààn}}
+*: Mandarin: {{t|cmn|氮丙啶|tr=dànbǐngdìng}}, {{t|cmn|環乙亞胺}}, {{t|cmn|环乙亚胺|tr=huányǐyààn}}
 * Finnish: {{t|fi|etyleeni-imiini}}
 {{trans-mid}}
 * German: {{t|de|Ethylenimin|n}}
