--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -85,7 +85,7 @@ From {{inh|en|enm|bageard||marked by a badge}}, from {{m|enm|bage|t=badge}}, ref
 * Kalmyk: {{t|xal|зорхн}}
 * Karachay Balkar: {{t|krc|борсукъ}}
 * Kazakh: {{t|kk|борсық}}
-* Khakas: {{t|kjh|порсык}} ,dialect: {{t|kjh|морсых}}
+* Khakas: {{t|kjh|порсых}} ,dialect: {{t|kjh|морсых}}
 * Korean: {{t+|ko|오소리}}
 * Kumyk: {{t|kum|порсукъ|tr=porsuq}}
 * Kurdish:
