--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -42,12 +42,13 @@ From earlier {{m|en|iland}}, from {{inh|en|enm|iland}}, {{m|enm|yland}}, {{m|enm
 
 ====Derived terms====
 {{der3|en
-|Barry Island|coney island|desert island|floating island|Grand Island|heat island|high island
+|Barry Island|coney island|desert island|floating island|Grand Island|Green Island
+|heat island|high island
 |interisland|Island County
 |islander|island dispenser|island display|island-hop|island maze|island platform|island position|island site|island state|island universe|islandwide|islandy|Kangaroo Island
-|kitchen island|Long Island|low island|no man is an island|Norfolk Island
+|kitchen island|Long Island|low island|no man is an island|Norfolk Island|North Island
 |Puget Island|Rock Island
-|safety island|security island|Island|sea-island|tidal island
+|safety island|security island|Island|sea-island|South Island|Stewart Island|tidal island
 |traffic island}}
 
 ====Related terms====
