--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -86,7 +86,7 @@ Short for {{m|en|copper||police officer}}, itself from {{m|en||cop|one who cops}
 * Estonian: {{t|et|ment}}
 * Finnish: {{t+|fi|pollari}}, {{t+|fi|kyttä}}
 * French: {{t+|fr|flic|m}}, {{t+|fr|keuf|m}}, {{t+|fr|poulet|m}}, {{t+|fr|police|f}} {{qualifier|Quebec}}
-* German: {{t+|de|Gendarm}}, {{t+|de|Bulle|m}}
+* German: {{t+|de|Gendarm}}, {{t+|de|Bulle|m}}, {{t+|de|Polizist|m}}
 * Greek: {{t+|el|μπάτσος|m}}
 * Hebrew: {{t+|he|שוטר|m|tr=shotér}}, {{t|he|שוטרת|f|tr=shotéret}}
 * Hungarian: {{t+|hu|zsaru}}
