--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -22,10 +22,10 @@ From earlier {{m|en|iland}}, from {{inh|en|enm|iland}}, {{m|enm|yland}}, {{m|enm
 # A [[contiguous]] [[area]] of [[land]], smaller than a [[continent]], totally [[surround]]ed by [[water]].
 #* {{RQ:Donne Devotions|chapter=17. Meditation|page=98|lines=2–3|passage=No man is an '''''Iland''''', intire of it selfe; every man is a peece of the ''Continent'', a part of the ''maine''; {{...}}}}
 #* '''2002''', Gordon L. Rottman, ''World War 2 Pacific island guide''
-#*: Sumatera is the second largest '''island''' in the East Indies and the fourth largest in the world covering 182,859 square miles.
+#*: Sumatra is the second largest '''island''' in the East Indies and the fourth largest in the world covering 182,859 square miles.
 # An [[entity]] [[surround]]ed by other entities that are very [[different]] from itself.
 #: ''an '''island''' of tranquility'' (a calm place surrounded by a noisy environment)
-#: ''an '''island''' of color on a butterfly's wing''
+#: ''an '''island''' of colour on a butterfly's wing''
 #* {{quote-journal|en|author=Daniel Taylor|title=Liverpool go through after Mohamed Salah stops Manchester City fightback|work={{w|The Guardian}} (London)|date=10 April 2018|url=https://www.theguardian.com/football/2018/apr/10/manchester-city-liverpool-champions-league-match-report
 |passage= He was on the ball in a flash, swerving to the left of City’s goalkeeper, Ederson, before shaping his body for a tricky angled finish. He was an '''island''' of composure, floating in his 39th goal of the season with a delicate chip into the corner.}}
 #* '''1939''', Deseret News, October 27 1939, ''Roosevelt Reaffirms American Neutrality''
