--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -186,7 +186,7 @@ From {{inh|en|enm|sir}}, borrowed from {{der|en|fro|sire|t=master, sir, lord}}, 
 ==Scottish Gaelic==
 
 ===Etymology===
-{{rfe|gd}}
+From {{inh|gv|sga|sirid|t=to traverse, seek}}. Cognate with {{cog|gv|shirr}}.
 
 ===Verb===
 {{gd-verb|past=shir|fut=siridh|vn=sireadh|pp=sirte}}
