--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -15,7 +15,7 @@ From {{inh|en|enm|attenden}}, {{m|enm|atenden}}, from {{der|en|fro|atendre||to a
 #* {{rfdatek|en|Sir Philip Sidney}}
 #*: The diligent pilot in a dangerous tempest doth not '''attend''' the unskilful words of the passenger.
 # {{lb|en|archaic|intransitive}} To [[listen]] ({{m|en|to}}, {{m|en|unto}}). {{defdate|from 15th c.}}
-#* {{w|Rudyard Kipling}}, ''The Beginning of the Armadillos''
+#* {{rfdatek|en|Rudyard Kipling}}, ''The Beginning of the Armadillos''
 #*: 'Now '''attend''' to me,' said Painted Jaguar, 'because this is very important. {{...}}
 # {{senseid|en|to turn one's consideration to, deal with}}{{lb|en|intransitive}} To turn one's [[consideration]] ({{m|en|to}}); to [[deal]] with (a task, problem, concern etc.), to look after. {{defdate|from 15th c.}}
 #: {{ux|en|Secretaries '''attend''' to correspondence.}}
