--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -304,8 +304,7 @@ Partly imitative, also influenced by {{m|en|burble}}. Compare {{cog|dum|bobbe||b
 # {{lb|en|transitive|archaic}} To [[cheat]], [[delude]].
 #* '''1749''', Henry Fielding, ''Tom Jones'', Folio Society 1973, p. 443:
 #*: No, no, friend, I shall never be '''bubbled''' out of my religion in hopes only of keeping my place under another government {{...}}
-#* {{rfdatek|en|Addison}}
-#*: She has '''bubbled''' him out of his youth.
+#* {{quote-journal|en|date=1711-06-12|first=Joseph|last=Addison|authorlink=Joseph Addison|journal=The Spectator|number=89|newversion=republished in|title2=The Works of Joseph Addison|volume2=1|year2=1842|location2=New York|publisher2=Harper & Brothers|pageurl2=https://books.google.com/books?id=akkVAAAAYAAJ&pg=PA142|page2=142|passage=He tells me with great passion that she has '''bubbled''' him out of his youth; that she drilled him on to five and fifty [years old], and that he verily believes she will drop him in his old age, if she can find her account in another.}}
 #* {{rfdatek|en|Sterne}}
 #*: The great Locke, who was seldom outwitted by false sounds, was nevertheless '''bubbled''' here.
 # {{lb|en|intransitive|Scotland|and|Northern England}} To [[cry]], [[weep]].
