--- a/en/c/cauliflower.34088.wikitext
+++ b/en/c/cauliflower.34088.wikitext
@@ -83,7 +83,7 @@ From 16th century {{m|en|cole-florye}}. Compare {{cog|la|caulis}}, {{cog|fr|chou
 * Romanian: {{t+|ro|conopidă|f}}
 * Romansch: {{t|rm|cardifiol|m}}
 * Russian: {{t+|ru|цветна́я капу́ста|f}}
-* Serbo-Croatian: {{t+|sh|karfiol|m}}
+* Serbo-Croatian: {{t+|sh|karfiol|m}}, {{t+|sh|cvjetača|f}}
 * Slovak: {{t|sk|karfiol|m}}
 * Slovene: {{t+|sl|cvetača|f}}
 * Sotho: {{t|st|kholifolawa}}
