--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -99,6 +99,9 @@ Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||sca
 * {{l|en|inertial mass}}
 * {{l|en|gravitational mass}}
 
+====Descendants====
+* {{desc|ja|ウエイト|tr=ueito|bor=1}}
+
 ====Translations====
 {{trans-top|force due to gravity}}
 * Afrikaans: {{t|af|gewig}}
