--- a/en/o/Oaxaca.775466.wikitext
+++ b/en/o/Oaxaca.775466.wikitext
@@ -77,7 +77,7 @@ Borrowed from {{bor|en|es|Oaxaca}}, from {{der|en|nci|Huāxacac}}, from {{m|nci|
 ==Spanish==
 
 ===Etymology===
-Borrowed from {{der|es|nci|Huāxacac}}, from {{m|nci|Huāxacatzin|t=name of a hill}}, from {{m|nci|huāxin|t=a type of tree}} + {{m|nci|yacatl|t=nose}} + {{m|nci|-tzin|t=honorific suffix}}.
+Borrowed from {{bor|es|nci|Huāxacac}}, from {{m|nci|Huāxacatzin|t=name of a hill}}, from {{m|nci|huāxin|t=a type of tree}} + {{m|nci|yacatl|t=nose}} + {{m|nci|-tzin|t=honorific suffix}}.
 
 ===Pronunciation===
 * {{es-IPA|Huajaca}}
@@ -85,9 +85,9 @@ Borrowed from {{der|es|nci|Huāxacac}}, from {{m|nci|Huāxacatzin|t=name of a hi
 ===Proper noun===
 {{es-proper noun|f}}
 
-# Oaxaca {{gloss|city}}
-# Oaxaca {{gloss|municipality}}
-# Oaxaca {{gloss|state}}
+# {{place|es|city|c/Mexico|t=Oaxaca}}
+# {{place|es|municipality|c/Mexico|t=Oaxaca}}
+# {{place|es|state|c/Mexico|t=Oaxaca}}
 
 ====Synonyms====
 * {{l|es|OA}} {{qualifier|abbreviation}}
