--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -174,6 +174,7 @@ From {{inh|en|enm|lether}}, from {{inh|en|ang|leþer||leather}}, from {{inh|en|g
 * Faroese: {{t|fo|leður-}}
 * Finnish: {{t+|fi|nahka|alt=nahka-}}, {{t+|fi|nahkainen}}
 * French: {{t|fr|de cuir}}
+* Galician: {{t|gl|de coiro}}
 * German: {{t+|de|ledern}}
 * Greek:
 *: Ancient Greek: {{t|grc|δερμάτινος}}
