--- a/en/n/NRA.26207.wikitext
+++ b/en/n/NRA.26207.wikitext
@@ -2,7 +2,7 @@
 
 ===Proper noun===
 {{en-proper noun}}
-
+# {{lb|en|US|historical|1930s}} {{initialism of|en|{{w|National Recovery Act}}}}
 # {{lb|en|US}} {{initialism of|en|{{w|National Rifle Association}}}}
 # {{lb|en|Ireland}} {{initialism of|en|{{w|National Roads Authority}}}}
 # {{lb|en|UK|pensions}} normal retirement age
