--- a/en/m/motoring.856210.wikitext
+++ b/en/m/motoring.856210.wikitext
@@ -9,9 +9,9 @@
 {{en-noun|-|s}}
 
 # The act of [[driving]] a [[car]].
-#* {{w|George Bernard Shaw}}, personal correspondence
+#* {{rfdatek|en|George Bernard Shaw}}, personal correspondence
 #*: The afternoon was horrible; but when we struck the sea at Exmouth, and the coast, familiar to me through my Torquay '''motorings''', became lovely in the evening. I revived & was quite jolly when I arrived.
-#* '''1983''', Kelly Keagy (of the music group Night Ranger), "Sister Christian"
+#* '''1983''', {{w|Kelly Keagy}} (of the music group {{w|Night Ranger}}), "{{w|Sister Christian}}"
 #*: You're '''motoring''' / What's your price for flight / In finding mister right? / You'll be alright tonight
 
 =====Synonyms=====
