--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -30,6 +30,8 @@ From {{etyl|enm|en}} {{m|enm|thaugh}}, {{m|enm|thagh|}}, from {{etyl|ang|en}} {{
 
 ====Translations====
 {{trans-top|however}}
+* Chinese:
+*: Mandarin: {{t+|cmn|然而}}
 * Czech: {{t+|cs|nicméně}}
 * Danish: {{t+|da|dog}}
 * Dutch: {{t+|nl|echter}}
