--- a/en/l/least weasel.8233.wikitext
+++ b/en/l/least weasel.8233.wikitext
@@ -1,13 +1,20 @@
 ==English==
+{{was wotd|2020|February|26}}
+
+===Etymology==
+[[File:Mustela-nivalis.jpg|thumb|The least weasel (''[[Mustela nivalis]]'')]]
+
+From {{m|en|least}} + {{m|en|weasel}}, from the fact that it is the smallest member of its [[genus]].
 
 ===Pronunciation===
-* {{IPA|en|/ˈliːstˈwizəl/}}
+* {{a|RP}} {{IPA|en|/ˈliːst ˈwiːz(ə)l/}}
+* {{a|GA}} {{IPA|en|/ˈlist ˈwiz(ə)l/}}
+* {{hyphenation|en|least wea|sel}}
 
 ===Noun===
-{{wikipedia}}
 {{en-noun}}
 
-# ''[[Mustela nivalis]]'', the smallest member of the [[weasel]] [[genus]] (''[[Mustela]]'').
+# The {{vern|common weasel}}, {{vern|little weasel}}, or simply [[weasel]] (''[[Mustela nivalis]]''), the [[small]]est [[member]] of the [[weasel]] [[genus]] ''[[Mustela]]'' which is [[native#Adjective|native]] to [[Eurasia]], [[North America]], and [[North Africa]].
 
 ====Translations====
 {{trans-top|''Mustela nivalis''}}
@@ -69,5 +76,8 @@
 * Welsh: {{t|cy|bronwen|f}}, {{t|cy|gwenci|f}}
 * West Frisian: {{t|fy|wezeling|?}}
 {{trans-bottom}}
+
+===Further reading===
+* {{pedia}}
 
 [[Category:en:Mustelids]]
