--- a/en/l/least weasel.8233.wikitext
+++ b/en/l/least weasel.8233.wikitext
@@ -1,7 +1,7 @@
 ==English==
 {{was wotd|2020|February|26}}
 
-===Etymology==
+===Etymology===
 [[File:Mustela-nivalis.jpg|thumb|The least weasel (''[[Mustela nivalis]]'')]]
 
 From {{m|en|least}} + {{m|en|weasel}}, from the fact that it is the smallest member of its [[genus]].
