--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -39,7 +39,7 @@ From {{inh|en|enm|rotten}}, {{m|enm|roten}}, from {{inh|en|ang|rotian||to rot, b
 * {{l|en|potter's rot}}
 
 ====Translations====
-{{trans-top|to decay}}
+{{trans-top|''(intransitive)'' to suffer decomposition}}
 * Arabic: {{t|ar|أَفْسَدَ}}, {{t|ar|فَسَدَ}}
 *: Gulf Arabic: {{t|afb|خاس|tr=ḵās}}
 *: Moroccan Arabic: {{t|ary|خْمج|tr=ḵməj}}
@@ -103,6 +103,20 @@ From {{inh|en|enm|rotten}}, {{m|enm|roten}}, from {{inh|en|ang|rotian||to rot, b
 * Vietnamese: {{t+|vi|rữa}}, {{t+|vi|rã}}
 * Walloon: {{t+|wa|pouri}}
 * Welsh: {{t+|cy|pydru}}, {{t|cy|braenu}}, {{t+|cy|madru}}
+{{trans-bottom}}
+
+====Translations====
+{{trans-top|''(transitive)'' to make putrid}}
+* Greek:
+*: Ancient: {{t|grc|σήπω}}
+{{trans-mid}}
+{{trans-bottom}}
+
+====Translations====
+{{trans-top|''(transitive)'' to cause to deteriorate in any way, as in morals}}
+* Greek:
+*: Ancient: {{t|grc|σήπω}}
+{{trans-mid}}
 {{trans-bottom}}
 
 ===Noun===
