--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -116,14 +116,14 @@ From {{inh|en|enm|symple}}, {{m|enm|simple}}, from {{bor|en|fro|-}} and {{bor|en
 * Interlingue: {{t|ie|simplic}}
 * Irish: {{t|ga|simplí}}
 * Italian: {{t+|it|semplice}}, {{t+|it|mero|m}}
-* Japanese: {{t+|ja|簡単|tr=かんたんな, kantan-na|alt=簡単な}}, {{t+|ja|単純|tr=たんじゅんな, tanjun-na|alt=単純な}}, {{qualifier|easy}} {{t+|ja|易い|tr=やすい, yasui}}
+* Japanese: {{t+|ja|簡単|tr=かんたんな, kantan na|alt=簡単な}}, {{t+|ja|単純|tr=たんじゅんな, tanjun na|alt=単純な}}, {{qualifier|easy}} {{t+|ja|易い|tr=やすい, yasui}}
 * Javanese: {{t-needed|jv}}
 * Kannada: {{t-needed|kn}}
 * Kazakh: {{t+|kk|қарапайым}}, {{t+|kk|жеңіл}} {{qualifier|easy}}
 * Khmer: {{t|km|មិនពិបាក|tr=mɨn pi’baak}}
 * Korean: {{t|ko|간단한|tr=gandan-han}} ({{t+|ko|簡單}} + {{t+|ko|한}}), {{qualifier|predicate}} {{t+|ko|간단하다|tr=gandan-hada}}
 * Kurdish:
-*: Sorani: {{t+|ku|ئاسان|tr=AsAn}}, {{t+|ku|ساکار|tr=sAkAr}}
+*: Sorani: {{t+|ku|ئاسان}}, {{t+|ku|ساکار}}
 * Kyrgyz: {{t+|ky|жөнөкөй}}, {{t+|ky|жеңил}} {{qualifier|easy}}
 {{trans-mid}}
 * Ladino: {{t|lad|kolay}}, {{t|lad|sempl}}, {{t|lad|sémpliche}}
