--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -46,8 +46,8 @@ From earlier {{m|en|iland}}, from {{inh|en|enm|iland}}, {{m|enm|yland}}, {{m|enm
 |Green Island|heat island|high island
 |interisland|Island County
 |islander|island dispenser|island display|island-hop|island maze|island platform|island position|island site|island state|island universe|islandwide|islandy|Kangaroo Island
-|kitchen island|Long Island|low island|no man is an island|Norfolk Island|North Island
-|Puget Island|Rock Island
+|kitchen island|Long Island|low island|Mersea Island|no man is an island|Norfolk Island
+|North Island|Puget Island|Rock Island
 |safety island|security island|Island|sea-island|South Island|Stewart Island|tidal island
 |traffic island}}
 
