--- a/en/u/ulterior motive.802595.wikitext
+++ b/en/u/ulterior motive.802595.wikitext
@@ -22,7 +22,7 @@
 {{trans-top|alternative or hidden reason for doing something}}
 * Catalan: {{t|ca|segona intenció|f}}
 * Chinese:
-*: Mandarin: [[不可告人]][[的]][[動機]], [[不可告人]][[的]][[动机]] (bùkěgàorén de dòngjī), {{qualifier|to have an ulterior motive}} [[別有用心]], [[别有用心]] (biéyǒuyòngxīn), {{t|cmn|他心|tr=tāxīn|sc=Hani}}
+*: Mandarin: {{t|cmn|[[不可告人]][[的]][[動機]]|sc=Hani}}, {{t|cmn|[[不可告人]][[的]][[动机]]|tr=bùkěgàorén de dòngjī|sc=Hani}}, {{qualifier|to have an ulterior motive}} {{t|cmn|別有用心|sc=Hani}}, {{t|cmn|别有用心|tr=biéyǒuyòngxīn|sc=Hani}}, {{t|cmn|他心|tr=tāxīn|sc=Hani}}
 * Danish: {{t|da|bagtanke|c}}
 * Dutch: {{t|nl|verborgen beweegredenen}}
 * Finnish: {{t+|fi|taka-ajatus}}
