--- a/en/i/irregular galaxy.802551.wikitext
+++ b/en/i/irregular galaxy.802551.wikitext
@@ -7,7 +7,7 @@
 # {{lb|en|astronomy}} A [[galaxy]] which is has no [[spiral]]s and is not [[elliptical]].
 #: ''The Magellanic Clouds are '''irregular galaxies'''.''
 
-====Abbreviations====
+====Synonyms====
 * [[IrG]], [[Irr]]
 
 ====Hypernyms====
