--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -1,6 +1,5 @@
 {{also|водка}}
 ==English==
-{{wikipedia}}
 [[File:Wodkaflaschen.JPG|thumb|Various bottles of vodka]]
 
 ===Etymology===
@@ -22,7 +21,7 @@ The standard of identity is from the [[s:Code of Federal Regulations|Code of Fed
 |title=Friday's Business
 |chapter=20|url=http://openlibrary.org/works/OL45537W
 |passage=Eurydice pointed to the cupboard, and sat down on the low divan with folded hands, and looked at the floor. She was quite white. Elsa made her drink a glass of '''vodka'''.}}
-# A serving of the above beverage
+# A serving of the above beverage.
 #* {{quote-book
 |en
 |year=1986
@@ -32,7 +31,7 @@ The standard of identity is from the [[s:Code of Federal Regulations|Code of Fed
 |publisher=Faber and Faber
 |title=USSR, From an Original Idea by Karl Marx
 |passage=You should mutter sullenly into your glass, cursing the serving woman (Witch! Hag! Poison!) or the '''vodka''' (Poison! Bitch!), as the one pours you another glass of the other.}}
-# {{lb|en|US|_|standard of identity}} [[neutral spirits#English|Neutral spirits]] distilled (or treated after distillation) so as to have no distinctive character, aroma, taste{{,}} or color
+# {{lb|en|US|_|standard of identity}} [[neutral spirits#English|Neutral spirits]] distilled (or treated after distillation) so as to have no distinctive character, aroma, taste{{,}} or color.
 
 ====Derived terms====
 {{der4
@@ -155,6 +154,9 @@ The standard of identity is from the [[s:Code of Federal Regulations|Code of Fed
 * Russian: {{t+|ru|во́дка|f}}
 * Spanish: {{t+|es|vodka|m|f}}
 {{trans-bottom}}
+
+===Further reading===
+* {{pedia}}
 
 [[Category:en:Distilled beverages]]
 
