--- a/en/c/consume.34056.wikitext
+++ b/en/c/consume.34056.wikitext
@@ -21,13 +21,11 @@ From {{bor|en|fro|consumer}}, from {{der|en|la|consumo|cōnsūmēre}}.
 #: ''Desire '''consumed''' him.''
 # {{lb|en|transitive}} To [[destroy]] completely.
 #: ''The building was '''consumed''' by fire.''
-#* {{rfdatek|en|Shakespeare}}
-#*: If he were putting to my house the brand / That shall '''consume''' it.
+#* {{RQ:Shakespeare Coriolanus|IV|vi|passage=If he were putting to my house the brand / That shall '''consume''' it.}}
 #* Bible, Matthew vi. 20
 #*: Lay up for yourselves treasures in heaven, where neither moth nor rust doth '''consume'''.
 # {{lb|en|intransitive|obsolete}} To [[waste away]] slowly.
-#* {{rfdatek|en|Shakespeare}}
-#*: Therefore, let Benedick, like cover'd fire, / '''Consume''' away in sighs.
+#* {{RQ:Shakespeare Much Ado|III|i|passage=Therefore, let Benedick, like cover'd fire, / '''Consume''' away in sighs.}}
 #* '''1899''', Kate Chopin, ''The Awakening'':
 #*: He assured her the child was '''consuming''' at that moment in the next room.
 # {{lb|en|economics|transitive|intransitive}} To [[trade]] [[money]] for [[good]] or [[service]]s as an [[individual]].
