--- a/en/p/prisoner of war.4326.wikitext
+++ b/en/p/prisoner of war.4326.wikitext
@@ -33,6 +33,7 @@
 * Georgian: {{t|ka|სამხედრო ტყვე}}
 * German: {{t+|de|Kriegsgefangener|m}}, {{t+|de|Kriegsgefangene|f}}
 * Greek: {{t|el|αιχμάλωτος πολέμου|m|f}}
+*: Ancient: {{t|grc|αἰχμάλωτος|m|f}}
 * Hebrew: {{t|he|שָׁבוּי|m|tr=shavúy}}, {{t|he|שְׁבוּיָה|f|tr=shvuyá}}
 * Hindi: {{t|hi|युद्ध-बंदी|m}}, {{t+|hi|बंदी|m}}
 * Hungarian: {{t+|hu|hadifogoly}}
