--- a/en/c/crook.34069.wikitext
+++ b/en/c/crook.34069.wikitext
@@ -3,7 +3,7 @@
 
 ===Pronunciation===
 * {{IPA|en|/kɹʊk/}}
-* {{a|obsolete}} {{IPA|en|/kɹuːk/}}<ref>{{R:Critical Pronouncing Dictionary|Rook|195|3|ppage=1}}</ref>
+* {{a|obsolete}} {{IPA|en|/kɹuːk/}}<ref>{{R:Critical Pronouncing Dictionary|Crook|195|3|ppage=1}}</ref>
 * {{audio|en|en-us-crook.ogg|Audio (US)}}
 * {{audio|en|EN-AU ck1 crook.ogg|Audio (AU)}}
 * {{rhymes|en|ʊk}}
