--- a/en/l/least weasel.8233.wikitext
+++ b/en/l/least weasel.8233.wikitext
@@ -16,6 +16,9 @@ From {{m|en|least}} + {{m|en|weasel}}, from the fact that it is the smallest mem
 {{en-noun}}
 
 # The {{vern|common weasel}}, {{vern|little weasel}}, or simply [[weasel]] (''[[Mustela nivalis]]''), the [[small]]est [[member]] of the [[weasel]] [[genus]] ''[[Mustela]]'', [[native#Adjective|native]] to [[Eurasia]], [[North America]], and [[North Africa]].
+#* {{quote-book|en|author=Elliott Coues|authorlink=Elliott Coues|chapter=MUSTELINÆ—Continued: The Weasels. [The Weasel. Putorius (Gale) vulgaris.]|title=Fur-bearing Animals: A Monograph of North American Mustelidæ,{{nb...|in which an Account of the Wolverene, the Martens or Sables, the Ermine, the Mink and Various Other Kinds of Weasels, Several Species of Skunks, the Badger, the Land and Sea Otters, and Numerous Exotic Allies of these Animals, in Contributed to the History of North American Mammals.}}|series=[[w:United States Geological Survey|United States Geological Survey of the Territories]], [[w:United States Department of the Interior|Department of the Interior]], Miscellaneous Publications|seriesvolume=no. 8|location=Washington, D.C.|publisher=[[w:United States Government Publishing Office|Government Printing Office]]|year=1877|page=105|pageurl=https://books.google.com/books?id=2pbDQ3WZrMoC&pg=PA105|oclc=2500572|passage=The range of the '''Least Weasel''' extends entirely across the continent on this hemisphere; but its north and south dispersion are less definite, in the present state of our knowledge.}}
+#* {{quote-book|en|author=Edward P[ayson] Roe|authorlink=Edward Payson Roe|chapter=An Old Tenement|title=Nature’s Serial Story|location=New York, N.Y.|publisher=[[w:Dodd, Mead & Co.|Dodd, Mead, and Company]]|year=1884|page=342|pageurl=https://archive.org/details/naturesserial00roeeiala/page/342/mode/1up|oclc=804655581|passage=Two other interesting animals may have lived in that tree, the '''least weasel''' and his sanguinary cousin the ermine, or large weasel. Both are brown, after the snow finally disappears, and both turn white with the first snow-storm.}}
+#* {{quote-journal|en|author=Edward W[illiam] Nelson|authorlink=Edward William Nelson|title=Smaller Mammals of North America|editor=[[w:Gilbert Hovey Grosvenor|Gilbert H[ovey] Grosvenor]]|magazine={{w|National Geographic}}|location=Washington, D.C.|publisher={{w|National Geographic Society}}{{nb...|Hubbard Memorial Hall}}|month=May|year=1918|volume=XXXIII|issue=5|page=471|pageurl=https://archive.org/details/nationalgeograp331918nati/page/471/mode/1up|issn=0027-9358|oclc=1049714034|passage=The '''least weasels''' are also circumpolar in distribution, but are limited to the northern parts of Europe, Asia, and North America. [...] '''Least weasels''' are characterized by the same swift alertness and boldness so marked in the larger species. In fact they are, if possible, even quicker in their movements.}}
 
 ====Translations====
 {{trans-top|''Mustela nivalis''}}
