--- a/en/l/least weasel.8233.wikitext
+++ b/en/l/least weasel.8233.wikitext
@@ -19,6 +19,10 @@ From {{m|en|least}} + {{m|en|weasel}}, from the fact that it is the smallest mem
 #* {{quote-book|en|author=Elliott Coues|authorlink=Elliott Coues|chapter=MUSTELINÆ—Continued: The Weasels. [The Weasel. Putorius (Gale) vulgaris.]|title=Fur-bearing Animals: A Monograph of North American Mustelidæ,{{nb...|in which an Account of the Wolverene, the Martens or Sables, the Ermine, the Mink and Various Other Kinds of Weasels, Several Species of Skunks, the Badger, the Land and Sea Otters, and Numerous Exotic Allies of these Animals, in Contributed to the History of North American Mammals.}}|series=[[w:United States Geological Survey|United States Geological Survey of the Territories]], [[w:United States Department of the Interior|Department of the Interior]], Miscellaneous Publications|seriesvolume=no. 8|location=Washington, D.C.|publisher=[[w:United States Government Publishing Office|Government Printing Office]]|year=1877|page=105|pageurl=https://books.google.com/books?id=2pbDQ3WZrMoC&pg=PA105|oclc=2500572|passage=The range of the '''Least Weasel''' extends entirely across the continent on this hemisphere; but its north and south dispersion are less definite, in the present state of our knowledge.}}
 #* {{quote-book|en|author=Edward P[ayson] Roe|authorlink=Edward Payson Roe|chapter=An Old Tenement|title=Nature’s Serial Story|location=New York, N.Y.|publisher=[[w:Dodd, Mead & Co.|Dodd, Mead, and Company]]|year=1884|page=342|pageurl=https://archive.org/details/naturesserial00roeeiala/page/342/mode/1up|oclc=804655581|passage=Two other interesting animals may have lived in that tree, the '''least weasel''' and his sanguinary cousin the ermine, or large weasel. Both are brown, after the snow finally disappears, and both turn white with the first snow-storm.}}
 #* {{quote-journal|en|author=Edward W[illiam] Nelson|authorlink=Edward William Nelson|title=Smaller Mammals of North America|editor=[[w:Gilbert Hovey Grosvenor|Gilbert H[ovey] Grosvenor]]|magazine={{w|National Geographic}}|location=Washington, D.C.|publisher={{w|National Geographic Society}}{{nb...|Hubbard Memorial Hall}}|month=May|year=1918|volume=XXXIII|issue=5|page=471|pageurl=https://archive.org/details/nationalgeograp331918nati/page/471/mode/1up|issn=0027-9358|oclc=1049714034|passage=The '''least weasels''' are also circumpolar in distribution, but are limited to the northern parts of Europe, Asia, and North America. [...] '''Least weasels''' are characterized by the same swift alertness and boldness so marked in the larger species. In fact they are, if possible, even quicker in their movements.}}
+#* {{quote-book|en|author=Hartley H. T. Jackson|chapter=Family Mustelidae, Weasels and Allies|title=Mammals of Wisconsin|location=Madison, Wis.|publisher={{w|University of Wisconsin Press}}|year=1961|page=344|pageurl=https://books.google.com/books?id=qQfigtpJ11gC&pg=PA344|column=2|isbn=978-0-299-02150-4|passage=The '''least weasel''' is active both summer and winter, and although primarily nocturnal, it frequently hunts in the daytime. It neither hibernates nor migrates, though it may move from area to area to find available food.}}
+#* {{quote-book|en|author=John McPhee|authorlink=John McPhee|chapter=Travels in Georgia|title=Pieces of the Frame|edition=1st paperback|location=New York, N.Y.|publisher={{w|Farrar, Straus and Giroux}}|year=1973|year_published=1979|page=28|pageurl=https://books.google.com/books?id=VNW3w5xpIjcC&pg=PA28|isbn=978-0-374-51498-3|passage=[S]he had hoped against hope that he would be a '''least weasel'''—smallest of all carnivores. She had never seen one. The '''least weasel''' diets almost exclusively on tiny, selected mice.}}
+#* {{quote-journal|en|author=Steve Maslowski|title=The Least Weasel|magazine=[[w:Boys' Life|Boys’ Life: The Magazine for All Boys]]|location=North Brunswick, N.J.|publisher={{w|Boy Scouts of America}}|month=January|year=1978|volume=LXVIII|issue=1|page=18|pageurl=https://books.google.com/books?id=AV31uiCINC4C&pg=PA18|column=1|oclc=848277009|passage=Ounce for ounce, few creatures who hunt can match the relentless little '''least weasel'''. Driven by hunger and nervous energy, this tiny bundle of muscle and nerves is an efficient killer. [...] The '''least weasel''' can't squirt its foul fume like a skunk, but it can raise a pretty good stink. In summer, the male wears a coat which a chocolate brown top and white belly. In winter, the entire coat becomes white to match the snow.}}
+#* {{quote-book|en|author=Yeong-Seok Jo|author2=John T. Baccus|author3=John L. Koprowski|authorlink=John L. Koprowski|chapter=Carnivora [''Mustela nivalis'' Linnaeus 1766—Least Weasel]|title=Mammals of Korea|location=Incheon|publisher=National Institute of Biological Resources|date=20 December 2018|page=209|pageurl=https://books.google.com/books?id=71yHDwAAQBAJ&pg=PA209|isbn=978-89-6811-369-7|passage='''Least weasels''' kill prey much larger than themselves. [...] '''Least weasels''' kill small prey, such as voles, with a bite to the skull's occipital region or neck to disarticulate cervical vertebrae. [...] '''Least weasels''' do not dig dens, but nests{{sic|nest}} in abandoned burrows of other species, such as moles or rats, in crevices among tree roots, hollow logs, or stone walls.}}
 
 ====Translations====
 {{trans-top|''Mustela nivalis''}}
