--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -31,7 +31,7 @@ Uncertain. Perhaps from {{inh|en|ang|copian||to plunder; pillage; steal}}; or po
 # {{lb|en|transitive|trainspotting|slang}} To see and record a [[railway]] [[locomotive]] for the first time.
 # {{lb|en|transitive}} To [[steal]].
 # {{lb|en|transitive}} To [[adopt]].
-#: ''No need to '''cop''' an attitude with me, junior.''
+#: ''No need to '''cop''' a [['tude]] with me, junior.''
 # {{lb|en|transitive}} To [[earn]] by bad behavior.
 #* {{quote-song|en|year=1992|lyricist={{w|Roxanne Shanté}}|title=Straight Razor| album=The Bitch Is Back| passage=You bust in the house, another bitch’s mouth is suckin on your man's dick<br/>What do you do: think straight? Or do you run to the back,<br/>Open the trunk to the nickel-plate 38?<br/>“Wait wait, baby, please!”<br/>That's the shit he's '''coppin''' when he’s down on both his knees}}
 # {{lb|en|intransitive|usually with “to”|slang}} to [[admit]], especially to a crime.
