--- a/en/b/Balkans.741828.wikitext
+++ b/en/b/Balkans.741828.wikitext
@@ -42,6 +42,7 @@ Of {{etyl|trk|en}} origin. Compare {{cog|tr|balkan||wooded mountain range}}.
 *: Hijazi Arabic: {{t|acw|البَلْقَان|f|tr=al-balgān)}}
 * Armenian: {{t+|hy|Բալկաններ}}
 * Asturian: {{t|ast|Balcanes|m}}
+* Belarusian: {{t|be|Балканы|m-p}}
 * Bulgarian: {{t|bg|Балкани|p|sc=Cyrl}}
 * Catalan: {{t|ca|Balcans|m-p}}
 * Chinese:
@@ -79,6 +80,7 @@ Of {{etyl|trk|en}} origin. Compare {{cog|tr|balkan||wooded mountain range}}.
 * Spanish: {{t+|es|Balcanes|m-p}}
 * Swedish: {{t+|sv|Balkan}}
 * Turkish: {{t+|tr|Balkanlar|p}}
+* Ukrainian: {{t|uk|Балкани|m-p}}
 {{trans-bottom}}
 
 [[Category:en:Peninsulas]]
