--- a/en/b/Balkans.741828.wikitext
+++ b/en/b/Balkans.741828.wikitext
@@ -42,6 +42,7 @@ Of {{etyl|trk|en}} origin. Compare {{cog|tr|balkan||wooded mountain range}}.
 *: Hijazi Arabic: {{t|acw|البَلْقَان|f|tr=al-balgān)}}
 * Armenian: {{t+|hy|Բալկաններ}}
 * Asturian: {{t|ast|Balcanes|m}}
+* Azerbaijani: {{t|az|Balkanlar}}
 * Belarusian: {{t|be|Балканы|m-p}}
 * Bulgarian: {{t|bg|Балкани|p|sc=Cyrl}}
 * Catalan: {{t|ca|Balcans|m-p}}
@@ -55,10 +56,12 @@ Of {{etyl|trk|en}} origin. Compare {{cog|tr|balkan||wooded mountain range}}.
 * Finnish: {{t+|fi|Balkan}}
 * French: {{t+|fr|Balkans|m}}
 * Galician: {{t|gl|Balcáns|m-p}}
+* Georgian: {{t|ka|ბალკანეთი}}
 * German: {{t+|de|Balkan|m}}
 * Greek: {{t+|el|Βαλκάνια|n-p}}
 * Hungarian: {{t+|hu|Balkán}}
 * Ido: {{t+|io|Balkan}}
+* Indonesian: {{t|id|Balkan}}
 * Irish: {{t|ga|Balcáin|m-p|alt=na Balcáin}}
 * Italian: {{t+|it|Balcani|m-p}}
 {{trans-mid}}
@@ -68,6 +71,7 @@ Of {{etyl|trk|en}} origin. Compare {{cog|tr|balkan||wooded mountain range}}.
 * Latvian: {{t|lv|Balkāni|m-p}}
 * Lithuanian: {{t+|lt|Balkanai|m-p}}
 * Macedonian: {{t|mk|Балкан|m}}
+* Malay: {{t|ms|Balkan}}
 * Norwegian:
 *: Bokmål: {{t|nb|Balkan}}
 *: Nynorsk: {{t|nn|Balkan}}
@@ -85,6 +89,7 @@ Of {{etyl|trk|en}} origin. Compare {{cog|tr|balkan||wooded mountain range}}.
 * Swedish: {{t+|sv|Balkan}}
 * Turkish: {{t+|tr|Balkanlar|p}}
 * Ukrainian: {{t|uk|Балкани|m-p}}
+* Vietnamese: {{t|vi|Balkan}}
 {{trans-bottom}}
 
 [[Category:en:Peninsulas]]
