--- a/en/b/Balkans.741828.wikitext
+++ b/en/b/Balkans.741828.wikitext
@@ -59,6 +59,7 @@ Of {{etyl|trk|en}} origin. Compare {{cog|tr|balkan||wooded mountain range}}.
 * Georgian: {{t|ka|ბალკანეთი}}
 * German: {{t+|de|Balkan|m}}
 * Greek: {{t+|el|Βαλκάνια|n-p}}
+* Hebrew: {{t|he|הבלקן|m|tr=ha-balkan}}
 * Hungarian: {{t+|hu|Balkán}}
 * Ido: {{t+|io|Balkan}}
 * Indonesian: {{t|id|Balkan}}
@@ -87,6 +88,7 @@ Of {{etyl|trk|en}} origin. Compare {{cog|tr|balkan||wooded mountain range}}.
 * Slovene: {{t+|sl|Balkán|m}}
 * Spanish: {{t+|es|Balcanes|m-p}}
 * Swedish: {{t+|sv|Balkan}}
+* Thai: {{t|th|บอลข่าน|tr=bɔn-kàan}}
 * Turkish: {{t+|tr|Balkanlar|p}}
 * Ukrainian: {{t|uk|Балкани|m-p}}
 * Vietnamese: {{t|vi|Balkan}}
