--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -142,11 +142,12 @@ From {{inh|en|enm|bleden}}, from {{inh|en|ang|blēdan||to bleed}}, from {{inh|en
 * Faroese: {{t|fo|taka blóð úr æðr|alt=taka (einhvørjum) blóð úr æðr}}
 * Finnish: {{t|fi|[[vuodattaa]] [[verta]]}}
 * Greek: {{t+|el|αφαιμάσσω}} {{qualifier|literally}}, {{t|el|παίρνω αίμα}}
-{{trans-mid}}
 * Irish: {{t|ga|fuiligh}}
+{{trans-mid}}
 * Latin: {{t|la|dēpleō}}, {{t|la|phlebotomō}}
 * Mongolian: {{t+|mn|цуслах}}
 * Portuguese: {{t+|pt|sangrar}}
+* Spanish: {{t+|es|desangrar}}
 * Tagalog: {{t|tl|duguan}}
 {{trans-bottom}}
 
